fix: spacing contact

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
 
 .ms-fs-3 {font-size: 13px;}
 
-.ms-scrolling-chat {overflow-x: hidden; overflow-y: scroll;}
+/* .ms-scrolling-chat {overflow-x: hidden; overflow-y: scroll;} */
 
 .ms-block-position {position: sticky;}
 
